# A5-Graph-Neural-Network

./: .gitignore  A5-Graph-Neural-Networks.ipynb  A5_Assignment.md  README.md  pyproject.toml  results.json
lab_note/: A5-Graph-Neural-Networks.ipynb  A5-Graph.md
